infra/k8s/apps/overlays/azure/users/users-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: users
  namespace: e-commerce
spec:
  hosts:
  - "*"
  gateways:
  - aks-istio-ingress/store-ui-gateway
  http:
  - match:
    - uri:
        prefix: /api/users
    rewrite:
      uri: /
    route:
    - destination:
        host: users-service.e-commerce.svc.cluster.local
        port:
          number: 9090
